tests/errors/esub2.f90
subroutine g()
integer :: x
x = ~1
end subroutine
